fix for button not showing up correctly at different height scales due to the use of float point notation

--- a/styles.css
+++ b/styles.css
@@ -1001,7 +1001,7 @@
 
 #upload-images-icon {
   width: 14px;
-  padding-top: 3.6px;
+  padding-top: 4px;
   padding-bottom: 0px;
   padding-left: 3px;
   padding-right: 3px;
